# icarus-daedalus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  add-agent.sh  agents.yml  boot.sh  curator.py  daedalus-log.md  dashboard.html  dashboard.js  dialogue.sh  export-training.py  fabric-adapter.sh  fabric-retrieve.py  fabric-sync.sh  icarus-SOUL.md  icarus-demo.sh  icarus-log.md  pyproject.toml  setup.sh  test.sh  training-job.txt
.github/workflows/: ci.yml
dashboard/: .gitignore  README.md  pyproject.toml  server.cjs
dashboard/backend/app/: main.py
dashboard/backend/app/ingest/: fabric_backfill.py  handlers.py  watcher.py
dashboard/backend/app/maintenance/: scorer.py
dashboard/backend/app/routers/: fleet.py  maintenance.py
dashboard/backend/tests/: conftest.py  test_ingest.py  test_maintenance.py
dashboard/frontend/src/api/: client.ts
dashboard/frontend/src/routes/: Overview.tsx
dashboard/src/: App.tsx
dashboard/src/components/: sidebar.tsx
dashboard/src/icarus_dashboard/: __init__.py  __main__.py  app.py  layout.py  theme.py
dashboard/src/icarus_dashboard/data/: activity.py  memory.py  review.py
dashboard/src/icarus_dashboard/static/: activity.js  app.css  review.js
dashboard/src/icarus_dashboard/views/: activity.py  review.py  wiki.py
dashboard/src/lib/: api.ts  types.ts
dashboard/src/pages/: icarus.tsx
docs/: DESIGN.md  INTEGRATIONS.md  PROVENANCE.md  QA-REPORT-v0.1.md  QA-REPORT-v0.2.md  dashboard-plan.md  v03-audit-gaps.md  v03-audit-report.md
examples/: autogpt-adapter.py  crewai-adapter.py  hermes_adapter.py  langchain-adapter.py  quickstart.py
examples/hermes-demo/: daedalus-SOUL.md  daedalus-log.md  dialogue.sh  icarus-log.md  relay.py  test.sh
hooks/: on-start.sh
messages/: README.md
plugins/fabric-memory/: __init__.py  plugin.yaml
plugins/icarus/: __init__.py  export-training.py  fabric-retrieve.py  fabric_index.py  frontmatter.py  hooks.py  obsidian.py  plugin.yaml  schemas.py  state.py  tools.py  wiki.py
scripts/: self-train.sh  smoke-handoff.sh
skills/fabric-memory/: SKILL.md
skills/llm-wiki/: SKILL.md
skills/self-train/: SKILL.md
skills/world-labs/: SKILL.md
tests/: conftest.py  test_briefing.py  test_cli_extra.py  test_hashing.py  test_input_validation.py  test_layers.py  test_lineage.py  test_mcp_server.py  test_mcp_tools.py  test_retrieval.py  test_rollback.py  test_rollback_cascade.py  test_schema.py  test_session_archive.py  test_state_machine.py  test_store.py  test_supersession.py  test_taint_safe_retrieval.py  test_three_layer_adversarial.py  test_three_layer_integration.py  test_validation.py  test_wiki.py  test_working_memory.py
(+22 files in other folders)
